Archive2/69/53d27cf246969f/output
In file included from /usr/local/include/boost/serialization/extended_type_info_typeid.hpp:37:0,
                 from /usr/local/include/boost/archive/detail/iserializer.hpp:46,
                 from /usr/local/include/boost/archive/detail/interface_iarchive.hpp:22,
                 from /usr/local/include/boost/archive/detail/common_iarchive.hpp:23,
                 from /usr/local/include/boost/archive/basic_xml_iarchive.hpp:23,
                 from /usr/local/include/boost/archive/xml_iarchive.hpp:24,
                 from main.cpp:1:
/usr/local/include/boost/serialization/access.hpp: In instantiation of 'static void boost::serialization::access::serialize(Archive&, T&, unsigned int) [with Archive = boost::archive::xml_oarchive; T = double]':
/usr/local/include/boost/serialization/serialization.hpp:69:22:   required from 'void boost::serialization::serialize(Archive&, T&, unsigned int) [with Archive = boost::archive::xml_oarchive; T = double]'
/usr/local/include/boost/serialization/serialization.hpp:128:18:   required from 'void boost::serialization::serialize_adl(Archive&, T&, unsigned int) [with Archive = boost::archive::xml_oarchive; T = double]'
/usr/local/include/boost/archive/detail/oserializer.hpp:148:40:   required from 'void boost::archive::detail::oserializer<Archive, T>::save_object_data(boost::archive::detail::basic_oarchive&, const void*) const [with Archive = boost::archive::xml_oarchive; T = double]'
/usr/local/include/boost/archive/detail/oserializer.hpp:101:1:   required from 'class boost::archive::detail::oserializer<boost::archive::xml_oarchive, double>'
/usr/local/include/boost/archive/detail/oserializer.hpp:214:5:   required from 'boost::archive::detail::pointer_oserializer<Archive, T>::pointer_oserializer() [with Archive = boost::archive::xml_oarchive; T = double]'
/usr/local/include/boost/serialization/singleton.hpp:106:7:   [ skipping 4 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/boost/archive/detail/oserializer.hpp:473:13:   required from 'static void boost::archive::detail::save_pointer_type<Archive>::invoke(Archive&, TPtr) [with TPtr = double*; Archive = boost::archive::xml_oarchive]'
/usr/local/include/boost/archive/detail/oserializer.hpp:525:18:   required from 'void boost::archive::save(Archive&, T&) [with Archive = boost::archive::xml_oarchive; T = double* const]'
/usr/local/include/boost/archive/detail/common_oarchive.hpp:69:22:   required from 'void boost::archive::detail::common_oarchive<Archive>::save_override(T&, int) [with T = double* const; Archive = boost::archive::xml_oarchive]'
/usr/local/include/boost/archive/basic_xml_oarchive.hpp:114:9:   required from 'void boost::archive::basic_xml_oarchive<Archive>::save_override(const boost::serialization::nvp<T>&, int) [with T = double*; Archive = boost::archive::xml_oarchive]'
/usr/local/include/boost/archive/detail/interface_oarchive.hpp:63:9:   required from 'Archive& boost::archive::detail::interface_oarchive<Archive>::operator<<(T&) [with T = const boost::serialization::nvp<double*>; Archive = boost::archive::xml_oarchive]'
main.cpp:13:11:   required from here
/usr/local/include/boost/serialization/access.hpp:118:9: error: request for member 'serialize' in 't', which is of non-class type 'double'
         t.serialize(ar, file_version);
         ^
